style(course-home-page): fix notification pic
fix notification pic not centered

--- a/client/app/bundles/course/courses/components/misc/CourseInfoBox.scss
+++ b/client/app/bundles/course/courses/components/misc/CourseInfoBox.scss
@@ -16,6 +16,5 @@
 
 img {
   height: 100px;
-  margin-top: 1em;
   width: 100px;
 }
